2008-09-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/plugs/plugs.xml:
	* flumotion/component/plugs/rrd.py:
	  Rename plug properties.  See #1111.

2008-09-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/validate-registry.py:
	* flumotion/common/registry.py:
	* flumotion/launch/inspect.py:
	* flumotion/test/test_registry.py:
	* flumotion/component/bouncers/bouncer.xml:
	* flumotion/component/bouncers/tokentest.xml:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/plugs/cortado/cortado.xml:
	* flumotion/component/plugs/plugs.xml:
	  Add descriptions for plugs and their properties.
	  Add code to load and save them to the registry.
	  Validate that these are added to plugs and properties.
	  Closes #1139.

2008-09-05  Arek Korbik  <arkadini@gmail.com>

	* flumotion/configure/configure.py:
	Increase process termination timeouts, for now...

2008-09-05  Arek Korbik  <arkadini@gmail.com>

	* flumotion/configure/configure.py:
	* flumotion/common/medium.py (PingingMedium):
	* flumotion/twisted/pb.py (PingableAvatar):
	Unhardcode and (temporarily) increase the ping timeout multiplier.

2008-09-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/Makefile.am:
	* data/upgrade-to-0.5.3.xsl:
	* data/upgrade-to-0.5.3.xsl (added):
	  Add first stab at an upgrade xsl script.

2008-09-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/identity.py:
	* flumotion/component/plugs/identity.py:
	* flumotion/manager/config.py:
	* flumotion/manager/manager.py:
	* flumotion/test/test_config.py:
	  More IdentityProvider -> IdentityProviderPlug renames.

2008-09-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/validate-registry.py:
	  Add another check, instantiating the socket mentioned by a plug.
	* flumotion/component/misc/httpserver/cachedprovider.py:
	* flumotion/component/misc/httpserver/fileprovider.py: