@@ -1,3 +1,11 @@
+2008-09-10  Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/admin/assistant/scenarios.py:
+	* flumotion/admin/gtk/adminwindow.py:
+	* flumotion/admin/gtk/componentlist.py:
+	Select a reasonable default component after closing the asssitant,
+	fixes #1115
+
 2008-09-09  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/component/plugs/plugs.xml:
